--- a/responsive.css
+++ b/responsive.css
@@ -68,7 +68,7 @@
         margin: auto;
         width: 100%;
         height: 50vh;
-        margin-bottom: 16px;
+        margin-bottom: 32px;
     }
     .photo-item:hover .photo-item__img{
         height: 100%;
@@ -78,6 +78,9 @@
         border-radius: 4px;
         margin: 6px 0;
         animation: none;
+    }
+    .photo-item__title {
+        margin: -18px 0;
     }
     
 }
